# firedown

./: .gitignore  LICENSE  NOTICE  README.md  SECURITY.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/release/: output-metadata.json
app/schemas/com.solarized.firedown.data.DownloadDatabase/: 8.json
app/schemas/com.solarized.firedown.database.DownloadDatabase/: 7.json  9.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/db/: shortcuts.json
app/src/main/assets/error/: errorPageScripts.js  error_page_js.html  error_style.css
app/src/main/assets/firedown/: firedown.html  firedown_style.css
app/src/main/assets/icons/: icons.js  manifest.json
app/src/main/assets/parser/: background.js  manifest.json
app/src/main/assets/search/: list.json
app/src/main/assets/ublock/: background.html  manifest.json
app/src/main/assets/webrequests/: background.html  manifest.json
app/src/main/assets/youtube/: background.html  background.js  content.js  manifest.json
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/ffmpegutils/: CMakeLists.txt  downloader.c  downloader.h  encoder.c  encoder.h  ffmpeg-jni.c  helpers.c  helpers.h  metadatareader.c  metadatareader.h  queue.c  queue.h  thumbnailer.c  thumbnailer.h  utils.c  utils.h
app/src/main/res/anim/: slide_back_to_bottom.xml  slide_down.xml  slide_in_left.xml  slide_in_top_newtab.xml  slide_out_from_bottom.xml  slide_out_right.xml
app/src/main/res/color/: chip_download.xml  popup_header_selector.xml  segmented_button_background.xml  segmented_button_icon_color.xml  segmented_button_text_color.xml
app/src/main/res/drawable/: add_24.xml  address_bar.xml  ads_click_24.xml  badge.xml  baseline_android_24.xml  bg_address_box.xml  bg_circle_bitcoin.xml  bg_circle_fiat.xml  bg_circle_primary.xml  cookie_24.xml  deselect_24.xml  dialog_background.xml  dialog_rectangle.xml  dialog_rounded_divider.xml  dialog_rounded_top.xml  dns_24.xml  download_24.xml  encryption_24.xml  encryption_light_24.xml  expand_less_24.xml  expand_more_24.xml  footprint_24.xml  ic_arrow_back_24.xml  ic_arrow_forward_24.xml  ic_baidu_icon.xml  ic_baseline_archive_24.xml  ic_baseline_audiotrack_24.xml  ic_baseline_calendar_today_24.xml  ic_baseline_cancel_filled_24.xml  ic_baseline_check_circle_24.xml  ic_baseline_close_24.xml  ic_baseline_download_24.xml  ic_baseline_history_24.xml  ic_baseline_insert_drive_file_24.xml  ic_baseline_language_24.xml  ic_baseline_picture_as_pdf_24.xml  ic_baseline_settings_24.xml  ic_baseline_text_snippet_24.xml  ic_bing_icon.xml  ic_bitcoin_24.xml  (+92 more)
app/src/main/res/drawable-v24/: ic_bing_icon.xml  ic_brave_icon.xml  ic_firedown_new_tab.xml  ic_firedown_splash.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_lock.xml  activity_player.xml  activity_settings.xml  activity_vault.xml  activity_viewer.xml  actvity_bookmark.xml  actvity_downloads.xml  actvity_history.xml  actvity_main.xml  bottom_bar.xml  browser_address_bar.xml  browser_tab_button.xml  fragment_archive.xml  fragment_autocomplete_clipboard_view.xml  fragment_autocomplete_item.xml  fragment_autocomplete_item_search.xml  fragment_autocomplete_view.xml  fragment_bottom_progress.xml  fragment_browser.xml  fragment_browser_options_item.xml  fragment_browser_options_item_list.xml  fragment_browser_options_sublist_item_grid.xml  fragment_dialog_browser_options.xml  fragment_dialog_browser_options_help.xml  fragment_dialog_browser_options_holder.xml  fragment_dialog_browser_options_item_variant.xml  fragment_dialog_browser_options_list_options.xml  fragment_dialog_browser_options_variants.xml  fragment_dialog_browser_popup.xml  fragment_dialog_browser_popup_header.xml  (+61 more)
gradle/: gradle-daemon-jvm.properties
gradle/wrapper/: gradle-wrapper.properties
scripts/: sync-ffmpeg.sh
tools/: Replace.py  Upper.py  XmlInsert.py
(+833 files in other folders)
